--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "package-template",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "files": [
+    "build"
+  ],
   "directories": {
     "example": "example"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "Ashwin",
@@ -17,10 +22,14 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@types/jest": "^26.0.9",
     "babel-jest": "^26.2.2",
     "jest": "^26.2.2",
     "nodemon": "^2.0.4",
+    "rollup": "^2.23.1",
+    "rollup-plugin-typescript2": "^0.27.2",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   }
