--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "build",
-    "src/**/*.test.ts"
-  ]
+  "exclude": ["node_modules", "build", "src/**/*.test.ts"]
 }
